# mac-nix-agent

./: .gitignore  README.md  bootstrap.sh  darwin.nix  flake.nix  home.nix
hermes/: .env.example  Dockerfile  config.yaml  entrypoint.sh  run.sh
hermes/searxng/: settings.yml
modelops/: .gitignore  README.md  pyproject.toml
modelops/models/: .gitkeep
